--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
   <groupId>by.tms.c14onl.salovanatoly</groupId>
   <artifactId>TeachMeSkills_C14onl_SalovAnatoly_Maven</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <modules>
+    <module>lesson_22_classwork_servlets</module>
+  </modules>
+  <packaging>pom</packaging>
 
   <name>TeachMeSkills_C14onl_SalovAnatoly_Maven Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -26,10 +29,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
-    <finalName>TeachMeSkills_C14onl_SalovAnatoly_Maven</finalName>
+    <finalName>lesson22</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
