--- a/lesson_22_classwork_servlets/src/main/webapp/WEB-INF/web.xml
+++ b/lesson_22_classwork_servlets/src/main/webapp/WEB-INF/web.xml
@@ -9,10 +9,31 @@
     <servlet-name>home</servlet-name>
     <servlet-class>HomeServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>home2</servlet-name>
+    <servlet-class>HomeServlet2</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>book</servlet-name>
+    <servlet-class>BookServlet</servlet-class>
+  </servlet>
 
   <!--Указываем необходимый URL тегом servlet mapping -->
   <servlet-mapping>
     <servlet-name>home</servlet-name>
-    <url-pattern>/hello</url-pattern>
+    <url-pattern>/home</url-pattern>
+  </servlet-mapping>
+  <!-- можно мапить один сервлет на несколько URL -->
+  <servlet-mapping>
+    <servlet-name>book</servlet-name>
+    <url-pattern>/book</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>book</servlet-name>
+    <url-pattern>/book2</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>home2</servlet-name>
+    <url-pattern>/home2</url-pattern>
   </servlet-mapping>
 </web-app>
