--- a/lesson_22_homework_servlets/src/main/webapp/WEB-INF/web.xml
+++ b/lesson_22_homework_servlets/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,11 @@
   </servlet>
   <servlet>
     <servlet-name>get</servlet-name>
-    <servlet-class>servlets.GetCars</servlet-class>
+    <servlet-class>servlets.GetCarsServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>post</servlet-name>
+    <servlet-class>servlets.PostCarServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
@@ -30,6 +34,10 @@
   <servlet-mapping>
     <servlet-name>get</servlet-name>
     <url-pattern>/get</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>post</servlet-name>
+    <url-pattern>/post</url-pattern>
   </servlet-mapping>
 
 </web-app>
