--- a/lesson_23_classwork_javaee/src/main/webapp/WEB-INF/web.xml
+++ b/lesson_23_classwork_javaee/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,22 @@
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         version="2.5"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>Archetype Created Web Application</display-name>
+    <!--Можно сохранять парметры и их значения -->
+    <!--db.user = username -->
+    <context-param>
+        <param-name>db.user</param-name>
+        <param-value>username</param-value>
+    </context-param>
+    <!--db.pass = password -->
+    <context-param>
+        <param-name>db.pass</param-name>
+        <param-value>password</param-value>
+    </context-param>
     <!-- Необходимо определить два тега  servlet name, servlet class -->
     <servlet>
         <servlet-name>initDB</servlet-name>
@@ -30,6 +44,12 @@
         <servlet-name>put</servlet-name>
         <servlet-class>servlets.PutCarServlet</servlet-class>
     </servlet>
+    <listener>
+        <listener-class>listeners.MyRequestListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>listeners.DBInitListener</listener-class>
+    </listener>
     <servlet-mapping>
         <servlet-name>initDB</servlet-name>
         <url-pattern>/1</url-pattern>
