--- a/lesson_24_classwork_html/pom.xml
+++ b/lesson_24_classwork_html/pom.xml
@@ -8,8 +8,16 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+    </dependencies>
     <artifactId>lesson_24_classwork_html</artifactId>
+
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
