--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   <artifactId>TeachMeSkills_C14onl_SalovAnatoly_Maven</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>lesson_22_classwork_servlets</module>
     <module>lesson_22_homework_servlets</module>
     <module>lesson_23_classwork_javaee</module>
+    <module>lesson24_homework_html</module>
   </modules>
   <packaging>pom</packaging>
 
