--- a/lesson24_homework_html/pom.xml
+++ b/lesson24_homework_html/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <build>
-        <finalName>lesson24html</finalName>
+        <finalName>lesson24homework</finalName>
     </build>
 
 </project>
