--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <version>5.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.json</groupId>
+      <artifactId>jakarta.json-api</artifactId>
+      <version>2.0.0</version>
+    </dependency>
 
   </dependencies>
 
