--- a/lesson24_homework_html/pom.xml
+++ b/lesson24_homework_html/pom.xml
@@ -10,14 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
-    <artifactId>lesson25_homework_bootstrap</artifactId>
+    <artifactId>lesson24_homework_html</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <build>
-        <finalName>lesson25homework</finalName>
+        <finalName>lesson24homework</finalName>
     </build>
 
 </project>
