--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   <artifactId>TeachMeSkills_C14onl_SalovAnatoly_Maven</artifactId>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>lesson_22_classwork_servlets</module>
     <module>lesson_22_homework_servlets</module>
     <module>lesson_23_classwork_javaee</module>
+    <module>lesson28_classwork_spring_core</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -42,6 +42,17 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <version>5.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+    </dependency>
 
   </dependencies>
 
@@ -50,6 +61,22 @@
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <source>17</source>
+            <target>17</target>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.24</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
+        </plugin>
+        <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
@@ -57,10 +84,6 @@
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
