--- a/lesson_31_classwork_spring_mvc/pom.xml
+++ b/lesson_31_classwork_spring_mvc/pom.xml
@@ -12,10 +12,12 @@
     <artifactId>lesson_31_classwork_spring_mvc</artifactId>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>5.0.0</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
