--- a/lesson_32_classwork_spring_mvc/pom.xml
+++ b/lesson_32_classwork_spring_mvc/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.2.3.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
 
 
         <dependency>
