--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>lesson_22_homework_servlets</module>
     <module>lesson_23_classwork_javaee</module>
     <module>lesson_32_classwork_spring_mvc</module>
+      <module>lesson_33_classwork_mvc_lokalization</module>
   </modules>
   <packaging>pom</packaging>
 
