--- a/lesson34_classwork_boot/src/main/resources/application.yaml
+++ b/lesson34_classwork_boot/src/main/resources/application.yaml
@@ -6,3 +6,8 @@ spring:
     username: postgres
     password: sA#259979148307
     driver-class-name: org.postgresql.Driver
+user:
+  service:
+    enable: true;
+app:
+  url: testurl
