Lesson 44 spring security WebSecurityConfigurerAdapter

--- a/lesson44springsecurity/src/main/resources/application.properties
+++ b/lesson44springsecurity/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 # indicate password and name
 # spring.security.user.name=user
 # spring.security.user.password=1111
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=sA#259979148307
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#globally_quoted_identifiers=true ????????? ???????????? ????????? ????????????????? ???????? ????? ? ???????? ????? ???????
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
