Lesson 44 Classwork SpringSecurity

--- a/lesson44springsecurity/src/main/resources/application.properties
+++ b/lesson44springsecurity/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=sA#259979148307
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #globally_quoted_identifiers=true ????????? ???????????? ????????? ????????????????? ???????? ????? ? ???????? ????? ???????
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
