Lesson 44 spring security WebSecurityConfigurerAdapter

--- a/lesson44springsecurity/src/main/resources/application.properties
+++ b/lesson44springsecurity/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# indicate password and name
+# we can indicate password and name in .properties files
 # spring.security.user.name=user
 # spring.security.user.password=1111
 
@@ -8,5 +8,5 @@ spring.datasource.username=postgres
 spring.datasource.password=sA#259979148307
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#globally_quoted_identifiers=true ????????? ???????????? ????????? ????????????????? ???????? ????? ? ???????? ????? ???????
+#globally_quoted_identifiers=true -> this means we can use reserved(quoted) names in our code
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
