Spring Security Lesson 45 BcryptPasswordEncoder question

--- a/lesson45_spring_security_roles/build.gradle
+++ b/lesson45_spring_security_roles/build.gradle
@@ -14,7 +14,9 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-
+bootWar {
+    archiveName 'lesson45.war'
+}
 repositories {
     mavenCentral()
 }
