--- a/lesson46_spring_security_fly_db/src/main/resources/application.properties
+++ b/lesson46_spring_security_fly_db/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 #Run sql script from resources/data.sql only after creating table byspringboot
 #spring.jpa.defer-datasource-initialization=true
 spring.flyway.locations[0] = classpath:/db/migration
+spring.flyway.baseline-on-migrate=true
