Lesson 49 testing JUpiter no spring

--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+/*    implementation 'org.slf4j:slf4j-jdk14'*/
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
