--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -20,12 +20,16 @@ repositories {
 }
 
 dependencies {
-/*    implementation 'org.slf4j:slf4j-jdk14'*/
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+/*    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'*/
+    providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
