--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -20,7 +20,6 @@ repositories {
 }
 
 dependencies {
-
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -31,6 +30,9 @@ dependencies {
 /*    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'*/
     providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+/*Add mochito libraryes fro testing*/
+    testImplementation 'org.mockito:mockito-core:4.8.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
 }
 
 tasks.named('test') {
