--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 /*Add mochito libraryes fro testing*/
     testImplementation 'org.mockito:mockito-core:4.8.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 tasks.named('test') {
