--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+/*    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    testImplementation 'org.postgresql:postgresql'*/
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
