--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.23.1'
     /*Add H2 database for test*/
     /*testImplementation 'com.h2database:h2:2.1.214'*/
+    /*Test Container*/
+    testImplementation "org.testcontainers:junit-jupiter:1.17.5"
+    /*Test Container, add PostgeSQL module*/
+    testImplementation "org.testcontainers:postgresql:1.17.5"
 }
 /*Unit tests*/
 tasks.named('test') {
