--- a/lesson49_testing/src/main/resources/application.properties
+++ b/lesson49_testing/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Commit properties for Test Container
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.username=postgres
