--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -44,6 +44,16 @@ dependencies {
     testImplementation "org.testcontainers:junit-jupiter:1.17.5"
     /*Test Container, add PostgeSQL module*/
     testImplementation "org.testcontainers:postgresql:1.17.5"
+    //Add openFeign library for testing
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+}
+//Add Spring cloud
+dependencyManagement {
+    imports {
+        mavenBom  "org.springframework.cloud:spring-cloud-dependencies:2021.0.4"
+    }
 }
 /*Unit tests*/
 tasks.named('test') {
