--- a/lesson49_testing/build.gradle
+++ b/lesson49_testing/build.gradle
@@ -18,7 +18,9 @@ configurations {
 repositories {
     mavenCentral()
 }
-
+ext {
+    set('springCloudVersion', "2021.0.4")
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'junit:junit:4.13.1'
@@ -45,14 +47,14 @@ dependencies {
     /*Test Container, add PostgeSQL module*/
     testImplementation "org.testcontainers:postgresql:1.17.5"
     //Add openFeign library for testing
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 //Add Spring cloud
 dependencyManagement {
     imports {
-        mavenBom  "org.springframework.cloud:spring-cloud-dependencies:2021.0.4"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 /*Unit tests*/
