--- a/lesson49_testing/src/test/resources/application.properties
+++ b/lesson49_testing/src/test/resources/application.properties
@@ -1,7 +1,11 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/test
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.username=postgres
-#spring.datasource.password=sA#259979148307
+
+# Commit if we use Testcontainer-----------------------------------------------------------------
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=sA#259979148307
+#-----------------------------------------------------------------
+
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
 #globally_quoted_identifiers=true -> this means we can use reserved(quoted)names in our code
