--- a/lesson_23_homework_javaee/src/main/webapp/WEB-INF/web.xml
+++ b/lesson_23_homework_javaee/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>Archetype Created Web Application</display-name>
     <context-param>
-        <param-name>user</param-name>
+        <param-name>userMy</param-name>
         <param-value>admin</param-value>
     </context-param>
 
