--- a/lesson29_spring_aop/build.gradle
+++ b/lesson29_spring_aop/build.gradle
@@ -29,9 +29,7 @@ dependencies {
 
     //Enable Aspects
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
-    implementation 'org.springframework.boot:spring-boot-starter-aop'
-
-
+    implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.5'
 }
 
 tasks.named('test') {
