--- a/lesson29_spring_aop/build.gradle
+++ b/lesson29_spring_aop/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     //Enable Aspects
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
     implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.5'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j2
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.0.0'
 }
 
 tasks.named('test') {
