AOP worked version

--- a/lesson29_spring_aop/src/main/resources/application.properties
+++ b/lesson29_spring_aop/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+logging.level.root=debug
+logging.file.path=/lesson29_spring_aop/src/main/resources/
+logging.file.name=logs.txt
+
