AOP worked version

--- a/lesson29_spring_aop/src/main/resources/application.properties
+++ b/lesson29_spring_aop/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 logging.level.root=debug
-logging.file.path=/lesson29_spring_aop/src/main/resources/
-logging.file.name=logs.txt
+logging.file.path=lesson29_spring_aop/src/main/resources/logs/
+logging.file.name=lesson29_spring_aop/src/main/resources/logs/lesson29_spring_aop.log
 
