--- a/criteria_hibernate/build.gradle
+++ b/criteria_hibernate/build.gradle
@@ -24,8 +24,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
 
+    // https://mvnrepository.com/artifact/org.springframework/spring-orm
+    implementation 'org.springframework:spring-orm:6.0.3'
+
+
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
     implementation 'org.hibernate:hibernate-entitymanager:5.6.14.Final'
+
 
 
     annotationProcessor 'org.projectlombok:lombok'
