--- a/spring_rest/build.gradle
+++ b/spring_rest/build.gradle
@@ -14,7 +14,9 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-
+bootWar {
+    archiveName 'springrest.war'
+}
 repositories {
     mavenCentral()
 }
@@ -25,7 +27,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
