--- a/spring_rest/build.gradle
+++ b/spring_rest/build.gradle
@@ -22,6 +22,10 @@ repositories {
 }
 
 dependencies {
+    //turn on actuator
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
