--- a/spring_rest/src/main/resources/application.properties
+++ b/spring_rest/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #globally_quoted_identifiers=true -> this means we can usereserved(quoted)names in our code
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
+management.endpoints.web.exposure.include=*
