--- a/spring_rest/src/main/resources/application.properties
+++ b/spring_rest/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 #globally_quoted_identifiers=true -> this means we can usereserved(quoted)names in our code
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 management.endpoints.web.exposure.include=*
+springdoc.show-actuator=true
