--- a/spring_rest/build.gradle
+++ b/spring_rest/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
+    //turn on hateoas
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-hateoas
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 
