--- a/spring_rest/src/main/resources/application.properties
+++ b/spring_rest/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #globally_quoted_identifiers=true -> this means we can usereserved(quoted)names in our code
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#Turn on actuator
 management.endpoints.web.exposure.include=*
+#Swagger add actuator to open-ui
 springdoc.show-actuator=true
