--- a/rest_microservice_userbackend/build.gradle
+++ b/rest_microservice_userbackend/build.gradle
@@ -15,7 +15,7 @@ configurations {
     }
 }
 bootWar {
-    archiveName 'userbackend.war'
+    archiveName 'springrestuserbackend.war'
 }
 repositories {
     mavenCentral()
