OpenFeign userbackend  microservice

--- a/rest_microservice_userbackend_feignlient/build.gradle
+++ b/rest_microservice_userbackend_feignlient/build.gradle
@@ -14,47 +14,30 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-bootWar {
-    archiveName 'springrestuserbackend.war'
-}
+
 repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2022.0.0")
+}
+
 dependencies {
-    //turn on actuator
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
-    //turn on open api for rest
-    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
-    //turn on hateoas
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-hateoas
-    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
-
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.1'
-
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
-    providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
-    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
 
-    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-
-
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 tasks.named('test') {
