--- a/spring_security_https_jwtstandart_acl/build.gradle
+++ b/spring_security_https_jwtstandart_acl/build.gradle
@@ -9,6 +9,10 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+bootWar {
+    archiveName 'httpsjwt.war'
+}
+
 repositories {
     mavenCentral()
 }
